@@ -38,6 +38,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added $wgJQueryVersion, $wgJQueryMinified and $wgJQueryOnEveryPage (true by
   default) to configure loading of jQuery by MediaWiki.
 * XmlFunctions.php has been removed. Use the Xml or Html classes as appropriate.
+* Added $wgSQLMode for setting database SQL modes - either performance (null)
+  or other reasons (such as enabling stricter checks)
 
 === New features in 1.17 ===
 * (bug 10183) Users can now add personal styles and scripts to all skins via
